# sy_api

./: .gitignore  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml
docs/: fabric.md  note.md  resource.md  user.md
syapi/: __init__.py  auth.py  base.py  constants.py  exceptions.py  fabric.py  faci.py  linker.py  note.py  project.py  resource.py  utils.py
